--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
     "nodemon": "^1.19.3"
   }
 }
